Fix serialization bug
Signed-off-by: gaobinlong <gbinlong@amazon.com>